Use opam-exec to run dune commands in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,9 @@ jobs:
 
       - run: opam install . --deps-only -t
 
-      - run: dune build
+      - run: opam exec -- dune build
 
-      - run: dune runtest
+      - run: opam exec -- dune runtest
 
   analysis:
     name: Submit dependencies for vulnerability alerts
