--- a/sandswarm.opam
+++ b/sandswarm.opam
@@ -12,6 +12,7 @@ bug-reports: "https://github.com/username/reponame/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.16"}
+  "yojson"
   "odoc" {with-doc}
 ]
 build: [
