--- a/test/dune
+++ b/test/dune
@@ -2,4 +2,5 @@
  (name test_sandswarm)
  (libraries base stdio yojson sandswarm)
  (inline_tests)
- (preprocess (pps ppx_expect)))
+ (preprocess
+  (pps ppx_expect)))
